# makepad

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build_debug.sh  build_example.bat  build_index.js  build_release.sh  build_webgl.sh  check_all_platforms.sh  dmx.ron  example.html  index.html  index.json  index.ron  makepad_state0.ron  pre_push_check.sh  run_example.sh  run_first_init.sh  rustfmt.toml  serve_webgl.sh  watch_debug.sh  watch_example_webgl.sh  watch_native.sh  watch_webgl.sh
audio_graph/: Cargo.toml
audio_graph/audio_widgets/: Cargo.toml
audio_graph/src/: audio_graph.rs  audio_stream.rs  audio_traits.rs  audio_unit_effect.rs  audio_unit_instrument.rs  display_audio.rs  instrument.rs  lib.rs  mixer.rs  piano.rs  test_synth.rs
code_editor/: Cargo.toml  TODO.md  test.rs
code_editor/btree/: Cargo.toml
code_editor/collections/: Cargo.toml  TODO
code_editor/core/: Cargo.toml
code_editor/frontend/: Cargo.toml
code_editor/range_set/: Cargo.toml
code_editor/regex/: Cargo.toml
code_editor/rope/: Cargo.toml
code_editor/segment/: Cargo.toml
code_editor/sparse_set/: Cargo.toml
code_editor/src/: affinity.rs  app.rs  arena.rs  bias.rs  biased_line_pos.rs  biased_pos.rs  biased_text_pos.rs  biased_usize.rs  change.rs  char.rs  code_editor.rs  code_view.rs  context.rs  cursor.rs  decoration.rs  diff.rs  document.rs  edit_ops.rs  extent.rs  geometry.rs  grid_pos.rs  history.rs  inlays.rs  iter.rs  layout.rs  len.rs  length.rs  lib.rs  line.rs  line_ref.rs  main.rs  move_ops.rs  point.rs  pos.rs  position.rs  range.rs  range_set.rs  rect.rs  sel.rs  selection.rs  (+19 more)
code_editor/text_segmentation/: Cargo.toml
code_editor/ucd/: Cargo.toml
code_editor/varint/: Cargo.toml
codeeditor/: Cargo.toml
codeeditor/src/: code_editor.rs  codeeditor.rs  lib.rs  main.rs  position.rs  range.rs  state.rs  text.rs  tokenizer.rs
component/: Cargo.toml
component/derive_frame/: Cargo.toml
component/image_formats/: Cargo.toml
component/src/: bare_window.rs  button.rs  button_logic.rs  check_box.rs  color_picker.rs  component_gc.rs  component_map.rs  debug_view.rs  desktop_button.rs  desktop_window.rs  dock.rs  drop_down.rs  empty_template.rs  file_tree.rs  fold_button.rs  fold_header.rs  fold_list.rs  frame.rs  frame_component.rs  frame_layout.rs  frame_registry.rs  frame_template.rs  frame_traits.rs  imgui.rs  input.rs  label.rs  lib.rs  link_button.rs  link_label.rs  list_box.rs  log_icon.rs  log_list.rs  nav_control.rs  plain_list.rs  popup_menu.rs  quad.rs  scroll_bar.rs  scroll_bars.rs  scroll_shadow.rs  scroll_view.rs  (+10 more)
draw/: Cargo.toml  README.md
draw/image_formats/: Cargo.toml
draw/src/: box.rs  cx_2d.rs  cx_3d.rs  cx_draw.rs  draw_list_2d.rs  font.rs  font_atlas.rs  font_cache.rs  font_loader.rs  glyph_rasterizer.rs  icon.rs  icon_atlas.rs  lib.rs  match_event.rs  nav.rs  overlay.rs  owned_font_face.rs  sdf_glyph_rasterizer.rs  sdf_rasterizer.rs  svg_glyph_rasterizer.rs  text_shaper.rs  turtle.rs  view.rs
draw/vector/: Cargo.toml
draw_2d/: Cargo.toml  README.md
draw_2d/image_formats/: Cargo.toml  LICENSE
draw_2d/src/: cx_2d.rs  font.rs  lib.rs  nav.rs  overlay.rs  turtle.rs  view.rs
draw_2d/vector/: Cargo.toml
editor/: Cargo.toml
editor/src/: codeeditor.rs  codeicon.rs  jseditor.rs  keyboard.rs  lib.rs  rusteditor.rs  textbuffer.rs  textcursor.rs
example/: Cargo.toml
example/src/: cap_winmf.rs  capture_winmf.rs  example.rs  mandelbrot.rs
example/webgl/: Cargo.toml
examples/ai_docs/: Cargo.toml  README.md
examples/chatgpt/: Cargo.toml  README.md
examples/cmdline_example/: Cargo.toml
examples/comfyui/: Cargo.toml  flux_dev.json  flux_schnell.json  workspace_2048.json  workspace_3000.json
examples/fractal_zoom/: Cargo.toml
examples/fun_audio/: Cargo.toml
examples/graph/: Cargo.toml
experiment/: .gitignore  Cargo.toml
experiment/src/: graph.rs  main.rs  style.rs
makepad/: Cargo.toml
makepad/app/: Cargo.toml
makepad/editor/: Cargo.toml
makepad/hub/: Cargo.toml
makepad/makehub/: Cargo.toml
makepad/makelib/: Cargo.toml
makepad/src/: app.rs  appstorage.rs  appwindow.rs  builder.rs  buildmanager.rs  cargolog.rs  cargologitem.rs  codeicon.rs  fileeditor.rs  filepanel.rs  filetree.rs  homepage.rs  hubui.rs  itemdisplay.rs  jseditor.rs  keyboard.rs  liveserver.rs  logitem.rs  loglist.rs  main.rs  makepadstyle.rs  makepadtheme.rs  plaineditor.rs  rustcompiler.rs  rusteditor.rs  searchindex.rs  searchresults.rs  textindex.rs
makepad/terminal/: Cargo.toml
makepad/wasm/: Cargo.toml
makepad/webgl/: Cargo.toml
makepad/workspacelib/: Cargo.toml
media/: Cargo.toml
media/src/: audio.rs  lib.rs  media_api.rs  midi.rs
platform/: Cargo.toml  README.md  build.rs
platform/android_state/: Cargo.toml
platform/debug_opt/: Cargo.toml
platform/derive_live/: Cargo.toml  build.rs
platform/error_log/: Cargo.toml
platform/image/: Cargo.toml
platform/live_compiler/: Cargo.toml  blarp.tzt
platform/live_id/: Cargo.toml
platform/live_tokenizer/: Cargo.toml
platform/math/: Cargo.toml
platform/shader_compiler/: Cargo.toml
platform/src/: action.rs  animator.rs  app_main.rs  area.rs  audio.rs  audio_stream.rs  component_list.rs  component_map.rs  cursor.rs  cx.rs  cx_api.rs  cx_draw_shaders.rs  cx_registries.rs  cx_thread.rs  debug.rs  decoding_api.rs  display_context.rs  draw_list.rs  draw_matrix.rs  draw_shader.rs  draw_vars.rs  file_dialogs.rs  font.rs  geometry.rs  id_pool.rs  lib.rs  live_atomic.rs  live_cx.rs  live_prims.rs  live_state.rs  live_traits.rs  log.rs  macos_menu.rs  main_app.rs  media_api.rs  menu.rs  midi.rs  nav.rs  network.rs  pass.rs  (+14 more)
platform/wasm_bridge/: Cargo.toml
platform/wasm_msg/: Cargo.toml
render/: Cargo.toml  LICENSE  README.md
render/GLX-sys/: Cargo.toml  wrapper.h
render/X11-sys/: Cargo.toml
render/derive/: Cargo.toml
render/derive_live/: Cargo.toml
render/draw_derive/: Cargo.toml
render/src/: cx.rs  (+94 more)
shui/: Cargo.toml
studio/: Cargo.toml  README.md
webgl/: Cargo.toml
widget/: Cargo.toml
widgets/: Cargo.toml  README.md  build.rs
(+3522 files in other folders)
