[workspace]

members = [
    "code_editor/range_set",
    "code_editor/regex",
    "code_editor/rope",
    "code_editor/segment",
    "code_editor/varint",
    "code_editor/ucd",
    "examples/numbers", 
    "examples/fractal_zoom", 
    "examples/cmdline_example",
    "examples/fun_audio",
    "examples/shader",
    "platform/wasm_bridge/test",
    "studio",
    "tools/webserver",
    "tools/wasm_strip",
    "tools/brotli_check",
]

