[package]
name = "makepad-audio-graph" 
version = "0.9.1"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad audio graph"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "PqUzhus2hR193QIXbeO1Eyz3qGo="

[dependencies]
makepad-platform = { path = "../platform", version = "0.9.1" }
