[package]
name = "makepad-component"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad components"
license = "MIT"

[dependencies]

[dependencies.makepad-platform]
path = "../platform"
version = "0.1"

[dependencies.makepad-derive-frame]
path = "./derive_frame"
version = "0.1"

[dependencies.makepad-image-formats]
path = "./image_formats"
version = "0.1"

[features]
nightly = ["makepad-platform/nightly"]

