[package]
name = "makepad-component"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad UI components"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "x"

[dependencies]
makepad-draw-2d = { path = "../draw_2d", version = "0.1.0" }
makepad-derive-frame = {path = "./derive_frame", version="0.1.0"}

[features]
nightly = ["makepad-draw-2d/nightly"]

