[package]
name = "makepad-draw-2d"
version = "0.3.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad 2d drawing API"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "7NALupLM0-i77IS85n9Q24oxdlU="

[dependencies]
makepad-platform = { path = "../platform", version = "0.3.0" }
makepad-image-formats = { path = "./image_formats", version = "0.3.0" }
makepad-vector = { path = "./vector", version = "0.3.0" }

[features] 
nightly = ["makepad-platform/nightly", "makepad-image-formats/nightly"]

