[package]
name = "example"
version = "0.1.0"
authors = ["makepaddev"]
edition = "2018"

[[bin]]
name="example"
path="src/example.rs"

[dependencies]
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }

[dependencies.widget]
path="../widget"
default-features = false

[dependencies.render]
path="../render"
default-features = false

# Webgl doesn't build with this cargo, use the one in webgl/
# but it can be needed to be set if you want RLS to show webGL errors
