[package]
name = "example"
version = "0.1.0"
authors = ["makepaddev"]
edition = "2018"

[[bin]]
name="example"
path="src/example.rs"

[dependencies]
serde_json = "*"
scoped_threadpool = "*"
serde = { version = "1.0", features = ["derive"] }

[dependencies.widget]
path="../widget"

[dependencies.render]
path="../render"

[target.x86_64-pc-windows-gnu.dependencies]
wio = "*"
com-impl = "*"

[target.x86_64-pc-windows-gnu.dependencies.winapi]
version = "*"
features = ["d3d11","propidl","xinput"]
