[package]
name = "experiments"
version = "0.1.0"
authors = ["tmpvar"]
edition = "2018"

[dependencies]
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }

[dependencies.widget]
path="../widget"

[dependencies.render]
path="../render"
