[package]
name = "makepad"
version = "0.1.0"
authors = ["makepaddev"]
edition = "2018"

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = "abort"
#debug = false
#bgcodegen-units = 1

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ron = "0.5"

[dependencies.widget]
path="../widget"
version="0.1"

[dependencies.render]
path="../render"
version="0.1"

[dependencies.hub]
path="./hub"
version="0.1"
