[package]
name = "makepad"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad"
license = "MIT"

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = "abort"
#debug = false
#bgcodegen-units = 1

[dependencies]
#time = "*"

[dependencies.makepad-tinyserde]
path="../render/tinyserde"

[dependencies.makepad-widget]
path="../widget"
version="0.1"

[dependencies.makepad-render]
path="../render"
version="0.2"

[dependencies.makepad-hub]
path="./hub"
version="0.1"
