[package]
name = "makepad"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad"
license = "MIT"

#[profile.release]
#lto = true
#opt-level = 'z'
#panic = "abort"
#debug = false
#bgcodegen-units = 1

[dependencies]

[dependencies.makepad-app]
path="./app"