[package]
name = "makepad-media"
version = "0.3.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad platform media extensions"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "K0G4UYCFBwjiYGsEcQcp3o7S-BM="

[dependencies]
makepad-platform = { path = "../platform", version = "0.3.0" }

[features] 
nightly = ["makepad-platform/nightly"]

