[package]
name = "makepad-media"
version = "0.3.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad platform media extensions"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "BZrCFUdHD-c7Y5Djp5iaKagMxBE="

[dependencies]
makepad-widgets = { path = "../widgets", version = "0.3.0" }

[features] 
nightly = ["makepad-widgets/nightly"]

