[package]
name = "makepad-platform"
version = "0.6.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad platform layer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "ue5pTU0e_KaMiNqLQpo2CaD-WeQ="

[dependencies]
makepad-futures = { path = "../libs/futures", version = "0.4.0" }
makepad-shader-compiler = { path = "./shader_compiler", version = "0.5.0" }
makepad-http = { path = "../libs/http", version="0.4.0" }

[target.wasm32-unknown-unknown.dependencies]
makepad-wasm-bridge = { path = "../libs/wasm_bridge", version = "0.4.0" }

[target.aarch64-apple-darwin.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.x86_64-apple-darwin.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.x86_64-apple-ios.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.aarch64-apple-ios-sim.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.aarch64-apple-ios.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.x86_64-apple-tvos.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.aarch64-apple-tvos-sim.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.aarch64-apple-tvos.dependencies]
makepad-objc-sys = { path = "../libs/objc-sys", version = "0.4.0" }

[target.aarch64-unknown-linux-gnu.dependencies]

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = { path = "../libs/jni-sys", version = "0.4.0" }

[target.'cfg(windows)'.dependencies.makepad-futures-legacy]
path = "../libs/futures_legacy"
version = "0.7.0"
 
[target.'cfg(windows)'.dependencies.makepad-windows]
path = "../libs/windows"
version = "0.51.1"
features = [
    "Win32_Foundation", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_Graphics_Gdi", 
    "Win32_Graphics_Dwm",
    "Win32_UI_HiDpi",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_DataExchange",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Ole",
    "Win32_Devices_FunctionDiscovery",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Media_MediaFoundation",
    "Win32_System_Variant",
    "Win32_System_SystemServices",
    "Devices_Enumeration", 
    "Devices_Midi",
    "Foundation_Collections",
    "Storage",
    "Storage_Streams",
    "implement"
]

[target.'cfg(windows)'.dependencies.windows-targets]
version = "0.48.3"
