[features]
default = ["ogl"]
ogl = []
mtl = []

[package]
name = "shui"
version = "0.1.0"
authors = ["arc"]
edition = "2018"

[dependencies]
shader_ast = {path="./shader_ast"}
glutin = "0.19"
gl = "0.11" 
rand = "0.3"
scoped_threadpool = "0.1"
metal = "0.14"
cocoa = "0.18"
core-graphics = "0.17"
bitflags = "1"
libc = "0.2"
log = "0.4"
objc-foundation = "0.1"
objc_id = "0.1"
block = "0.1.5"
foreign-types = "0.3"
winit = "0.18"
sema = "0.1.4"

[dependencies.objc]
version = "0.2.3"
features = ["objc_exception"]