[features]
default = ["mtl"]
ogl = [
    "glutin","gl","bitflags","libc","log","block","foreign-types",
    "winit","sema","time"
]
mtl = [
    "glutin","gl","bitflags","libc","log","block","foreign-types",
    "winit","sema","time","metal","cocoa","core-graphics",
    "objc-foundation","objc_id","objc"
]
webgl = [
    "bitflags"
]

[package]
name = "shui"
version = "0.1.0"
authors = ["arc"]
edition = "2018"

[dependencies]
shader_ast = {path="./shader_ast"}
derive_element = {path="./derive_element"}

[dependencies.glutin]
version = "0.19"
optional = true

[dependencies.gl]
version = "0.11"
optional = true

[dependencies.bitflags]
version = "1"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dependencies.log]
version = "0.4"
optional = true

[dependencies.block]
version = "0.1.5"
optional = true

[dependencies.foreign-types]
version = "0.3"
optional = true

[dependencies.winit]
version = "0.18"
optional = true

[dependencies.sema]
version = "0.1.4"
optional = true

[dependencies.time]
version = "0.1.4"
optional = true

[dependencies.metal]
version = "0.14"
optional = true

[dependencies.cocoa]
version = "0.18"
optional = true

[dependencies.core-graphics]
version = "0.17"
optional = true

[dependencies.objc-foundation]
version = "0.1"
optional = true

[dependencies.objc_id]
version = "0.1"
optional = true

[dependencies.objc]
version = "0.2.3"
optional = true