[package]
name = "makepad-studio"
version = "0.8.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad studio"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "ApDRzhyZwrD0ObJySvlMkfrMyZI="

[dependencies]
makepad-studio-core = {path="./core", version="0.5.0"}
