[package]
name = "makepad-studio"
version = "1.0.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad studio"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "EkK1QSsxv7UT52XhDLrPkeaEQA8="
metadata.makepad-check-platform = "desktop"

[dependencies]
makepad-widgets = {path="../widgets" , version="1.0.0"}
makepad-code-editor = {path="../code_editor", version="1.0.0"}
makepad-file-protocol = {path="./file_protocol", version="1.0.0"}
makepad-file-server = {path="./file_server", version="1.0.0"}
makepad-shell = {path="../libs/shell" , version="1.0.0"}
makepad-http = {path = "../libs/http", version = "1.0.0"}
jpeg-encoder = {version = "0.6.0"}
