[package]
name = "makepad_webgl"
version = "0.1.0"
authors = ["arc"]
edition = "2018"

[lib]
path = "../src/main.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
rand = "*"
syn = "*"

[dependencies.widgets]
path="../widgets"
default-features = false
features=["webgl"]
