[package]
name = "makepad_webgl"
version = "0.1.0"
authors = ["arc"]
edition = "2018"

[lib]
path = "../src/main.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
panic = "abort"
debug = true
codegen-units = 1

[dependencies]
rand = "*"
#miniserde = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }

[dependencies.widget]
path="../widget"
default-features = false
features=["webgl"]

[dependencies.render]
path="../render"
default-features = false
features=["webgl"]

[dependencies.editor]
path="../editor"
default-features = false
features=["webgl"]
