[package]
name = "widget"
version = "0.1.0"
authors = ["makepaddev"]
edition = "2018"

[features]
mtl = ["render/mtl"]
ogl = ["render/ogl"]
webgl = ["render/webgl"]

[dependencies]
rand = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
#syn = "*"
#proc-macro2 = "*"
#miniserde = "*"

[dependencies.render]
path="../render"
default-features = false