[package]
name = "makepad-widget"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad widgets"
license = "MIT"

[dependencies]
#serde = { version = "1.0", features = ["derive"] }


[dependencies.makepad-tinyserde]
path = "../render/tinyserde"

[dependencies.makepad-render]
path = "../render"
version = "0.2"
