[package]
name = "makepad-widgets"
version = "0.6.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad widgets"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "iGO4NcqKmI5RiuSC_d8LHCBQUqI="

[dependencies]
makepad-draw = { path = "../draw", version = "0.6.0" }
makepad-derive-widget = {path = "./derive_widget", version="0.4.0"}

makepad-zune-jpeg ={ version = "0.3.17 ",  path = "../libs/zune-jpeg" }
makepad-zune-png ={ version = "0.4.10", path = "../libs/zune-png"  }

makepad-html ={ path = "../libs/html", version = "0.4.0" }
unicode-segmentation = "1.11.0"
#makepad-image-formats ={ path = "../libs/image_formats", version = "0.3.0" }
pulldown-cmark = { version = "0.12.2", default-features = false, features = ["simd"] }
