[package]
name = "makepad-audio-widgets" 
version = "0.5.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad audio widgets"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "NJM6voAOpTWSdsRpI2k6rQnmeb0="
 
[dependencies] 
makepad-widgets = { path = "../../widgets", version = "0.5.0" }
