[package]
name = "makepad-audio-widgets" 
version = "0.9.1"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad audio widgets"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "kUclORbZoqUxFucqVigeEBAgfk4="
 
[dependencies] 
makepad-widgets = { path = "../../widgets", version = "0.9.1" }
