[package]
name = "makepad-derive-frame"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad frame derive macros"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
makepad-macro-lib = { path = "../../libs/macro_lib", version = "0.1" }
makepad-live-id = { path = "../../libs/live_id", version = "0.1" }

[features]
default = ["nightly"]
nightly = []
