[package]
name = "makepad-derive-frame"
version = "0.1.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2018"
description = "Makepad frame component derive macros"
license = "MIT OR Apache-2.0"
metadata.makepad-auto-version = "9gm029EFYpfAGmuU9mmgZsdlKJU="

[lib]
proc-macro = true

[dependencies]
makepad-micro-proc-macro = { path = "../../libs/micro_proc_macro", version = "0.1.0" }
makepad-live-id = { path = "../../libs/live_id", version = "0.1.0" }

[features]
default = ["nightly"]
nightly = []
