[package]
name = "makepad-vector"
version = "0.4.0"
authors = ["Makepad <info@makepad.nl>"]
edition = "2021"
description = "Makepad vector api"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/makepad/makepad/"
repository = "https://github.com/makepad/makepad/"
metadata.makepad-auto-version = "DB7HhhdiYtBivuq_IBnVPCc32tU="

[dependencies]

[dependencies.ttf-parser]
version = "0.19"
default-features = false
# NOTE(eddyb) this is the minimal set of features that could enable shaping,
# (`apple-layout` being the other notable shaping-related feature), and it's
# enabled to estimate build time impacts, even if it's not in use yet.
features = [
    "opentype-layout"
]
